kubernetes/digital-ocean/example/echo-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - host: echo1.callbackinsanity.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.callbackinsanity.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
